[package]
name = "reqwest-digest"
version = "0.3.0"
authors = ["David Webb <david@dpwlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
digest-access = "0.3"
http = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
url = "2.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
