[package]
name = "reqwest-digest"
version = "0.5.0"
authors = ["David Webb <david@dpwlabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
digest-access = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
